--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +19,7 @@
 <body>
     <nav>
         <a href="index.html" class="titlee">
-            <img src="/Landing/img/aarologo.png" alt="">
+            <img src="./img/aarologo.png" alt="">
         </a>
         <div class="nav-links" id="navLinks">
             <i class="fas fa-times" onclick="hideMenu()"></i>
@@ -36,8 +37,8 @@
         <section class="one">
             <h1>AAROHAN</h1>
             <h2>The Cultural Fest</h2>
-            <p>Aarohan is the annual cultural festival of MITWPU and the largest college fest of Pune. 
-                 <!-- Aarohan embodies the knack and passion of young potentials 
+            <p>Aarohan is the annual cultural festival of MITWPU and the largest college fest of Pune.
+                <!-- Aarohan embodies the knack and passion of young potentials 
                  from all over the country by giving the perfect platform to showcase their talents in a 3 day long fiesta. -->
             </p>
             <!-- <img src="/MITAAROHAN/Landing/img/PHOENIX-01.png" alt="" class="phoenix"> -->
@@ -145,21 +146,24 @@
                     <span></span>
                     <div class="sccontent">
                         <h2>Tree Plantation</h2>
-                        <p>MIT-WPU Aarohan organized a tree plantation drive in 2019 under its campaign 'Plant the Future'. A total of 501 trees were planted.</p>
+                        <p>MIT-WPU Aarohan organized a tree plantation drive in 2019 under its campaign 'Plant the
+                            Future'. A total of 501 trees were planted.</p>
                     </div>
                 </div>
                 <div class="scbox">
                     <span></span>
                     <div class="sccontent">
                         <h2>MARATHON</h2>
-                        <p>MIT-WPU Aarohan has organized multiple iterations of Pune's largest Run for a Cause Marathon to generate funds for the education of the underprivileged.</p>
+                        <p>MIT-WPU Aarohan has organized multiple iterations of Pune's largest Run for a Cause Marathon
+                            to generate funds for the education of the underprivileged.</p>
                     </div>
                 </div>
                 <div class="scbox">
                     <span></span>
                     <div class="sccontent">
                         <h2>Pride Month</h2>
-                        <p>MIT-WPU Aarohan expressed its support towards the LGBTQIA+ community through an Instagram Live in 2020 with an aim to spread awareness about the same.</p>
+                        <p>MIT-WPU Aarohan expressed its support towards the LGBTQIA+ community through an Instagram
+                            Live in 2020 with an aim to spread awareness about the same.</p>
                     </div>
                 </div>
             </div>
