--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Event</a></li>
-                <li><a href="/competition/comp.html">Competitions</a></li>
+                <li><a href="./competition/comp.html">Competitions</a></li>
                 <li><a href="#">Sponsor</a></li>
             </ul>
         </div>
