--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Event</a></li>
-                <li><a href="/competition/comp.html">Competitions</a></li>
-                <li><a href="#">Sponsor</a></li>
+                <li><a href="./events/events.html">Event</a></li>
+                <li><a href="./competition/comp.html">Competitions</a></li>
+                <li><a href="/sponsor/sponsor.html">Sponsor</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
