--- a/index.html
+++ b/index.html
@@ -18,23 +18,17 @@
 
 <body>
     <nav>
-        <a href="index.html" class="titlee">
+        <a href="./index.html" class="titlee">
             <img src="./img/aarologo.png" alt="">
         </a>
         <div class="nav-links" id="navLinks">
             <i class="fas fa-times" onclick="hideMenu()"></i>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-<<<<<<< HEAD
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./competition/comp.html">Competition</a></li>
                 <li><a href="./events/events.html">Event</a></li>
-                <li><a href="./competition/comp.html">Competitions</a></li>
-                <li><a href="/sponsor/sponsor.html">Sponsor</a></li>
-=======
-                <li><a href="#">Event</a></li>
-                <li><a href="./competition/comp.html">Competitions</a></li>
-                <li><a href="#">Sponsor</a></li>
->>>>>>> 4185c305189e8a49d2e699e5918c456678fed368
+                <li><a href="./gallery/gallery.html">Gallery</a></li>
+                <li><a href="./sponsor/sponsor.html">Sponsor</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
