--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 <div class="counter">150</div>
                                 <span> +</span>
                             </div>
-                            <div class="text">Colleges Involved</div>
+                            <div class="text">Colleges <span>Involved</span></div>
                         </div>
                     </div>
                     <div class="box">
