--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="scbox">
                     <span></span>
                     <div class="sccontent">
-                        <h2>Tree Plantation</h2>
+                        <h2>TREE PLANTATION</h2>
                         <p>MIT-WPU Aarohan organized a tree plantation drive in 2019 under its campaign 'Plant the
                             Future'. A total of 501 trees were planted.</p>
                     </div>
@@ -161,7 +161,7 @@
                 <div class="scbox">
                     <span></span>
                     <div class="sccontent">
-                        <h2>Pride Month</h2>
+                        <h2>PRIDE MONTH</h2>
                         <p>MIT-WPU Aarohan expressed its support towards the LGBTQIA+ community through an Instagram
                             Live in 2020 with an aim to spread awareness about the same.</p>
                     </div>
@@ -174,19 +174,19 @@
                 <div class="ytlinks">
                     <h1>AFTERMOVIES</h1>
                     <div class="container">
-                        <div class="boxes">
+                        <div class="boxes latest">
                             <iframe src="https://www.youtube.com/embed/eBbkGQuQ30I" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <div class="boxes">
+                        <div class="boxes old">
                             <iframe src="https://www.youtube.com/embed/JpByo20XDwQ" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <div class="boxes">
+                        <div class="boxes old">
                             <iframe src="https://www.youtube.com/embed/nnAvgSS3kbw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
