--- a/index.html
+++ b/index.html
@@ -195,30 +195,30 @@
                     </div>
                 </div>
                 <div class="footer">
-                    <div class="box">
+                    <div class="box phone">
                         <div class="logo">
                             <img src="img/icon/phone.png" alt="">
                         </div>
                         <div class="text">
                             <h1>Contact Us</h1>
-                            <div class="number">
+                            <div class="mobile number">
                                 <p>Competition : Isha - 9414115416</p>
                                 <p>Public Relation : Akshad - 9414115416</p>
-                                <p>Sponsor : Aayush - 9414115416</p>
+                                <p>Sponsor : Ayush - 9414115416</p>
                             </div>
                         </div>
                     </div>
                     <hr class="hrf">
-                    <div class="box">
+                    <div class="box address">
                         <div class="logo">
                             <img src="img/icon/address.png" alt="">
                         </div>
                         <div class="text">
                             <h1>Address</h1>
-                            <div class="number">
+                            <div class="number addr">
                                 <p>Mit Ground</p>
-                                <p>Mit College , Kothrud</p>
-                                <p>Pune (311202)</p>
+                                <p>MIT WPU , Kothrud</p>
+                                <p>Pune (411038)</p>
                             </div>
                         </div>
                     </div>
@@ -231,6 +231,7 @@
                             <h1>Email</h1>
                             <div class="number">
                                 <p>aarohan2022@gmail.com</p>
+                                <p>aarohancomp2022@gmail.com</p>
                             </div>
                         </div>
                     </div>
