--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./competition/comp.html">Competition</a></li>
-                <li><a href="./events/events.html">Event</a></li>
+                <li><a href="./events/eventsnew.html">Event</a></li>
                 <li><a href="./gallery/gallery.html">Gallery</a></li>
                 <li><a href="./sponsor/sponsor.html">Sponsor</a></li>
             </ul>
