--- a/competition/comp.html
+++ b/competition/comp.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--Code by Divinector (www.divinectorweb.com)-->
 <html lang="en">
 
 <head>
@@ -18,7 +17,6 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
             <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -27,25 +25,23 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">AAROHAN</a>
+                    <a class="navbar-brand" href="/index.html">AAROHAN</a>
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Events</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/competition/comp.html">Competition</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Sponsor</a></li>
+                        <li><a href="/events/eventsnew.html">Events</a></li>
+                        <li><a href="/gallery/gallery.html">Gallery</a></li>
+                        <li><a href="/sponsor/sponsor.html">Sponsor</a></li>
                     </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+                </div>
+            </div>
         </nav>
 
 
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active circle"><span>1</span></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1" class="circle"><span>2</span></li>
@@ -54,8 +50,6 @@
                 <li data-target="#carousel-example-generic" data-slide-to="4" class="circle"><span>5</span></li>
                 <li data-target="#carousel-example-generic" data-slide-to="5" class="circle"><span>6</span></li>
             </ol>
-
-            <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <div class="banner" style=" background-image: url('./black1.jfif');"></div>
@@ -130,8 +124,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Controls -->
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
