--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -21,11 +21,11 @@
         <div class="nav-links" id="navLinks">
             <i class="fas fa-times" onclick="hideMenu()"></i>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./competition/comp.html">Competition</a></li>
-                <li><a href="./events/events.html">Event</a></li>
-                <li><a href="./gallery/gallery.html">Gallery</a></li>
-                <li><a href="./sponsor/sponsor.html">Sponsor</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/competition/comp.html">Competition</a></li>
+                <li><a href="/events/eventsnew.html">Event</a></li>
+                <li><a href="/gallery/gallery.html">Gallery</a></li>
+                <li><a href="/sponsor/sponsor.html">Sponsor</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -48,7 +48,7 @@
         </section>
         <section class="three">
             <div class="info">
-                <h1>ComedyNite</h1>
+                <h1>Comedy Nite</h1>
                 <p>Comedy is a serious business. A serious business with only one purpose- to make people laugh. Here's
                     a challenge for you, how long can you hold that laughter in?</p>
             </div>
