--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -10,29 +10,34 @@
       <h3>Photo <span>Gallery</span></h3>
     </div>
     <div class="g-box">
+      <div class="dream">
+        <img src="./images/stage.jpg">    
+        <img src="./images/localtrain.jpg">    
+        <img src="./images/bandwars1.JPG">    
+        <img src="./images/bandwars3.JPG">    
+        <img src="./images/body zorbing.JPG">    
+        <img src="./images/creative.JPG">    
+      </div>
       
       <div class="dream">
-        <img src="./images/1.jpg">    
-        <img src="./images/2.jpg">    
-        <img src="./images/3.jpg">    
-        <img src="./images/4.jpg">    
-        <img src="./images/5.jpg">    
+        <img src="./images/nikhil 3 (1).jpg">
+        <img src="./images/kb2.JPG">    
+        <img src="./images/NIKHIL.jpg">    
+        <img src="./images/groyp dance.jpg">    
+        <img src="./images/YAHya.jpg">    
+        <img src="./images/nishant suri.jpg">  
+        <img src="./images/YAHya.jpg">  
+          
       </div>
 
       <div class="dream">
-        <img src="./images/6.jpg">    
-        <img src="./images/7.jpg">    
-        <img src="./images/8.jpg">    
-        <img src="./images/9.jpg">    
-        <img src="./images/10.jpg">
-      </div>
-
-      <div class="dream">
-        <img src="./images/11.jpg">    
-        <img src="./images/12.jpg">    
-        <img src="./images/13.jpg">    
-        <img src="./images/14.jpg">    
-        <img src="./images/15.jpg">
+        <img src="./images/Dastak.jpg">    
+        <img src="./images/papon.jpg">    
+        <img src="./images/sonali and chinamy.jpg">    
+        <img src="./images/art.JPG">    
+        <img src="./images/cn group2.jpg">
+        <img src="./images/ajeem.jpg">
+        <img src="./images/nikhil 3 (2).jpg">
       </div>
 
     </div>
