--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <a href="./index.html" class="titlee">
+        <a href="/index.html" class="titlee">
             <img src="/img/aarologo.png" alt="">
         </a>
         <div class="nav-links" id="navLinks">
