--- a/competition/comp.html
+++ b/competition/comp.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>COMPETITION</title>
+    <title>MitAarohan|Competitions|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.6.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="comp.css">
+    <link rel="icon" href="/img/favicon-16x16.png">
+
 </head>
 
 <body>
@@ -31,10 +33,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/index.html">Home</a></li>
-                        <li><a href="/competition/comp.html">Competition</a></li>
+                        <li><a href="/competition/comp.html">Competitions</a></li>
                         <li><a href="/events/eventsnew.html">Events</a></li>
                         <li><a href="/gallery/gallery.html">Gallery</a></li>
-                        <li><a href="/sponsor/sponsor.html">Sponsor</a></li>
+                        <li><a href="/sponsor/sponsor.html">Sponsors</a></li>
                     </ul>
                 </div>
             </div>
@@ -66,7 +68,7 @@
                 <div class="item">
                     <div class="banner" style="background-image: url('./black1.jfif');"></div>
                     <div class="carousel-caption">
-                        <h2>HEAD<span> BAND</span></h2>
+                        <h2>HEAD<span> BANG</span></h2>
                         <h3>BAND WARS</h3>
                         <p>Music could be a flute that soothes the soul, it could also be an electric guitar that fires up your veins. Show us what music is to you, in this battle of bands !!</p>
                             <div class="viewpdf">
