--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tutorial</title>
+  <title>MitAarohan|Sponsors|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
+  <link rel="icon" href="/img/favicon-16x16.png">
+
 </head>
 <body>
   <div id="gallery">
@@ -26,8 +28,7 @@
         <img src="./images/groyp dance.jpg">    
         <img src="./images/YAHya.jpg">    
         <img src="./images/nishant suri.jpg">  
-        <img src="./images/YAHya.jpg">  
-          
+        <img src="./images/nikhil 3 (2).jpg">
       </div>
 
       <div class="dream">
@@ -37,7 +38,6 @@
         <img src="./images/art.JPG">    
         <img src="./images/cn group2.jpg">
         <img src="./images/ajeem.jpg">
-        <img src="./images/nikhil 3 (2).jpg">
       </div>
 
     </div>
