--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -9,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
-    <title>Mit Aarohan</title>
-    <link rel="stylesheet" href="eventsnew.css">
+    <title>MitAarohan|Events|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
+    <link rel="icon" href="/img/favicon-16x16.png">
+
 </head>
 
 <body>
@@ -22,10 +23,10 @@
             <i class="fas fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/competition/comp.html">Competition</a></li>
-                <li><a href="/events/eventsnew.html">Event</a></li>
+                <li><a href="/competition/comp.html">Competitions</a></li>
+                <li><a href="/events/eventsnew.html">Events</a></li>
                 <li><a href="/gallery/gallery.html">Gallery</a></li>
-                <li><a href="/sponsor/sponsor.html">Sponsor</a></li>
+                <li><a href="/sponsor/sponsor.html">Sponsors</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -55,7 +56,7 @@
         </section>
         <section class="four">
             <div class="info">
-                <h1>Theater Fest</h1>
+                <h1>Theatre Fest</h1>
                 <p>We must all do theatre to find out who we are, and to discover who we could become. Lose yourself in
                     the theatre acts we present to you.</p>
             </div>
