--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MitAarohan | The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>
+    <link rel="icon" href="/img/favicon-16x16.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
@@ -12,7 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
-    <title>Mit Aarohan</title>
     <link rel="stylesheet" href="home.css">
 </head>
 
@@ -25,10 +26,10 @@
             <i class="fas fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./competition/comp.html">Competition</a></li>
-                <li><a href="./events/eventsnew.html">Event</a></li>
+                <li><a href="./competition/comp.html">Competitions</a></li>
+                <li><a href="./events/eventsnew.html">Events</a></li>
                 <li><a href="./gallery/gallery.html">Gallery</a></li>
-                <li><a href="./sponsor/sponsor.html">Sponsor</a></li>
+                <li><a href="./sponsor/sponsor.html">Sponsors</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -133,7 +134,7 @@
                                 <div class="counter">10</div>
                                 <span> Lac +</span>
                             </div>
-                            <div class="text">Cash Price</div>
+                            <div class="text">Cash Prize</div>
                         </div>
                     </div>
                 </div>
@@ -227,8 +228,7 @@
                         <div class="text">
                             <h1>Email</h1>
                             <div class="number">
-                                <p>aarohan2022@gmail.com</p>
-                                <p>aarohancomp2022@gmail.com</p>
+                                <p>aarohan.mitwpu@gmail.com</p>
                             </div>
                         </div>
                     </div>
