--- a/sponsor/sponsor.html
+++ b/sponsor/sponsor.html
@@ -3,8 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Sponsorship</title>
-
+    <title>MitAarohan|Sponsors|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="sponsor.css">
@@ -12,16 +11,21 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="icon" href="/img/favicon-16x16.png">
+
 
   </head>
 
   <body>
-    <h1>AAROHAN SPONSORS</h1>
+    <div class="heading">
+      <a href="/index.html"><img src="/img/aarologo.png" alt=""></a>
+      <h1>AAROHAN SPONSORS</h1>
+    </div>
     <section class="section1">
       <div class="container-fluid">
         <div class="row">
           <div class="title">
-            <h3 class="feature-text">TITLE SPONSOR</h3>
+            <h2 class="feature-text">TITLE SPONSOR</h2>
             <img class="testimonial-image" src="images/sponsors-16.jpg" alt="maruti suzuki">
           </div>
 
