--- a/competition/comp.html
+++ b/competition/comp.html
@@ -82,7 +82,7 @@
                     <div class="carousel-caption">
                         <h2>DAS<span>TAK</span></h2>
                         <h3>STREET PLAY</h3>
-                        <p>Acting requires faith. You just have to believe that you are the person you're playing and that what is happening is happening to the real you. Here's a platform for you to bring out all the drama you have stored within !!</p>
+                        <p>Acting requires faith. You just have to believe that you are the person you're playing and that's what is happening is happening to the real you. Here's a platform for you to bring out all the drama you have stored within !!</p>
                             <div class="viewpdf">
                                 <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing">View Brochure</a></p>
                                 <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view">View RuleBook</a></p>
