--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
         <section class="one">
             <h1>AAROHAN</h1>
             <h2>The Cultural Fest</h2>
-            <p>Aarohan is the annual cultural festival of MITWPU and the largest college fest of Pune.
-                <!-- Aarohan embodies the knack and passion of young potentials 
-                 from all over the country by giving the perfect platform to showcase their talents in a 3 day long fiesta. -->
-            </p>
-            <!-- <img src="/MITAAROHAN/Landing/img/PHOENIX-01.png" alt="" class="phoenix"> -->
+            <p>Aarohan is the annual cultural festival of MIT-WPU and the largest college fest of Pune.</p>
         </section>
         <section class="section">
             <div class="aboutus">
@@ -91,7 +87,7 @@
                         </div>
                         <div class="container">
                             <div class="onestat">
-                                <div class="counter">35000</div>
+                                <div class="counter">40000</div>
                                 <span> +</span>
                             </div>
                             <div class="text">Footfall</div>
@@ -111,7 +107,7 @@
                         <div class="icon"><img src="img/icon/college.png" alt=""></div>
                         <div class="container">
                             <div class="onestat">
-                                <div class="counter">150</div>
+                                <div class="counter">170</div>
                                 <span> +</span>
                             </div>
                             <div class="text">Colleges <span>Involved</span></div>
@@ -121,10 +117,10 @@
                         <div class="icon"><img src="img/icon/participants.png" alt=""></div>
                         <div class="container">
                             <div class="onestat">
-                                <div class="counter">4000</div>
+                                <div class="counter">4500</div>
                                 <span> +</span>
                             </div>
-                            <div class="text">Partipants</div>
+                            <div class="text">Participants</div>
                         </div>
                     </div>
                     <div class="box">
@@ -173,10 +169,13 @@
         <section class="five">
             <div id="features">
                 <div class="ytlinks">
-                <h1>AFTERMOVIES</h1>
+                    <h1>AFTERMOVIES</h1>
                     <div class="container">
                         <div class="boxes latest">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/2oV8EMM5k2Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/2oV8EMM5k2Q"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
                         <div class="boxes old">
                             <iframe src="https://www.youtube.com/embed/JpByo20XDwQ" title="YouTube video player"
@@ -215,8 +214,8 @@
                             <h1>Address</h1>
                             <div class="number addr">
                                 <p>Mit Ground</p>
-                                <p>MIT WPU , Kothrud</p>
-                                <p>Pune (411038)</p>
+                                <p>MIT WPU , Rambaug Colony</p>
+                                <p>Kothrud ,Pune (411038)</p>
                             </div>
                         </div>
                     </div>
@@ -226,7 +225,7 @@
                             <img src="img/icon/email.png" alt="">
                         </div>
                         <div class="text">
-                            <h1>Email</h1>
+                            <h1>E-mail</h1>
                             <div class="number">
                                 <p>aarohan.mitwpu@gmail.com</p>
                             </div>
