--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -41,7 +41,7 @@
             </div>
         </section>
         <section class="two">
-            <div class="info">
+            <div class="infol">
                 <h1>Youtuber's Fest</h1>
                 <p>You never get bored with YouTube. How much fun would an evening full of interaction with YouTubers be
                     then? Only one way to find out, join us for the ever exciting YouTuber's fest!</p>
@@ -55,7 +55,7 @@
             </div>
         </section>
         <section class="four">
-            <div class="info">
+            <div class="infol">
                 <h1>Theatre Fest</h1>
                 <p>We must all do theatre to find out who we are, and to discover who we could become. Lose yourself in
                     the theatre acts we present to you.</p>
