--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MitAarohan|Sponsors|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
+  <title>MitAarohan|Gallery|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
   <link rel="icon" href="/img/favicon-16x16.png">
 
@@ -19,25 +19,28 @@
         <img src="./images/bandwars3.JPG">    
         <img src="./images/body zorbing.JPG">    
         <img src="./images/creative.JPG">    
+        <img src="./images/flashmob.jpg">    
       </div>
       
       <div class="dream">
         <img src="./images/nikhil 3 (1).jpg">
-        <img src="./images/kb2.JPG">    
+        <img src="./images/papon.jpg">    
         <img src="./images/NIKHIL.jpg">    
         <img src="./images/groyp dance.jpg">    
         <img src="./images/YAHya.jpg">    
         <img src="./images/nishant suri.jpg">  
         <img src="./images/nikhil 3 (2).jpg">
+        <img src="./images/children_s day.jpg">
       </div>
 
       <div class="dream">
         <img src="./images/Dastak.jpg">    
-        <img src="./images/papon.jpg">    
+        <img src="./images/kb2.JPG">    
         <img src="./images/sonali and chinamy.jpg">    
         <img src="./images/art.JPG">    
         <img src="./images/cn group2.jpg">
         <img src="./images/ajeem.jpg">
+        <img src="./images/air hockey.JPG">
       </div>
 
     </div>
