--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                 <div class="logoicon">
                     <div class="iconcontainer">
                         <ul>
-                            <li><i class="fab fa-facebook-f"><a href="https://www.facebook.com/aarohanfest/"></a></i></li>
-                            <li><i class="fab fa-twitter"></i><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"></a></li>
-                            <li><i class="fab fa-instagram"></i><a href="https://instagram.com/mitaarohanfest?utm_medium=copy_link"></a></li>
-                            <li><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"></a></li>
-                            <li><i class="fab fa-youtube"></i><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q"></a></li>
+                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -253,6 +253,7 @@
                 time: 2000
             });
         });
+        
     </script>
     <script>
         var navLinks = document.getElementById("navLinks");
