--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="home.css">
 </head>
 
@@ -65,11 +64,11 @@
                 <div class="media">
                     <div class="logos">
                         <ul>
-                            <li><i class="fab fa-facebook-f"><a href="https://www.facebook.com/aarohanfest/"></a></i></li>
-                            <li><i class="fab fa-twitter"></i><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"></a></li>
-                            <li><i class="fab fa-instagram"></i><a href="https://instagram.com/mitaarohanfest?utm_medium=copy_link"></a></li>
-                            <li><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"></a></li>
-                            <li><i class="fab fa-youtube"></i><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q"></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q"><i class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -235,11 +234,11 @@
                 <div class="logoicon">
                     <div class="iconcontainer">
                         <ul>
-                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q"><i class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
