--- a/sponsor/sponsor.html
+++ b/sponsor/sponsor.html
@@ -34,7 +34,7 @@
   <section class="section1">
     <div class="container-fluid">
       <div class="row">
-        <div class="title">
+        <div class="title sponsor">
           <h2 class="feature-text">TITLE SPONSOR</h2>
           <img class="testimonial-image" src="images/sponsors-16.jpg" alt="maruti suzuki">
         </div>
