--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     </div>
                 </div>
                 <div class="media">
-                    <div class="logos">
+                    <div class="logos photoss">
                         <ul>
-                            <li><a href="https://www.facebook.com/aarohanfest/"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/mitaarohanfest/"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q"><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><img src="/img/icon/fb.png" alt=""></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><img src="/img/icon/insta.png" alt=""></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><img src="/img/icon/youtube.png" alt=""></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09/" target="_blank"><img src="/img/icon/twitter.png" alt=""></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest" target="_blank"><img src="/img/icon/linkedin.png" alt=""></a></li>
                         </ul>
                     </div>
                 </div>
@@ -199,8 +199,8 @@
                             <h1>Contact Us</h1>
                             <div class="mobile number">
                                 <p>Competition : Isha - 9422022155</p>
-                                <p>Public Relation : Akshad - 7756079140</p>
-                                <p>Sponsor : Ayush - 9328529000</p>
+                                <p>Public Relation : Yashvi - 7693033684</p>
+                                <p>Sponsor : Ayush - 9326046437</p>
                             </div>
                         </div>
                     </div>
