--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
-    <title>MitAarohan|Events|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
+    <title>MitAarohan | Events | The Annual Cultural Fest of MIT WPU | Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
     <link rel="icon" href="/img/favicon-16x16.png">
 
 </head>
@@ -25,8 +25,8 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/competition/comp.html">Competitions</a></li>
                 <li><a href="/events/eventsnew.html">Events</a></li>
-                <li><a href="/gallery/gallery.html">Gallery</a></li>
-                <li><a href="/sponsor/sponsor.html">Sponsors</a></li>
+                <li><a href="/gallery/gallery.html" target="_blank">Gallery</a></li>
+                <li><a href="/sponsor/sponsor.html" target="_blank">Sponsors</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
