--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -24,6 +24,8 @@
       
       <div class="dream">
         <img src="./images/nikhil 3 (1).jpg">
+        <img src="./images/BANDSMOKE.JPG">
+        <img src="./images/RAJISTHANI.JPG">
         <img src="./images/papon.jpg">    
         <img src="./images/NIKHIL.jpg">    
         <img src="./images/groyp dance.jpg">    
