--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./competition/comp.html">Competitions</a></li>
                 <li><a href="./events/eventsnew.html">Events</a></li>
-                <li><a href="./gallery/gallery.html">Gallery</a></li>
-                <li><a href="./sponsor/sponsor.html">Sponsors</a></li>
+                <li><a href="./gallery/gallery.html" target="_blank">Gallery</a></li>
+                <li><a href="./sponsor/sponsor.html" target="_blank">Sponsors</a></li>
             </ul>
         </div>
         <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -64,11 +64,11 @@
                 <div class="media">
                     <div class="logos photoss">
                         <ul>
-                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><img src="/img/icon/fb.png" alt=""></a></li>
-                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><img src="/img/icon/insta.png" alt=""></a></li>
-                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><img src="/img/icon/youtube.png" alt=""></a></li>
-                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09/" target="_blank"><img src="/img/icon/twitter.png" alt=""></a></li>
-                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest" target="_blank"><img src="/img/icon/linkedin.png" alt=""></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><i class="fab fa-facebook-f blue"></i></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><i class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -234,11 +234,11 @@
                 <div class="logoicon">
                     <div class="iconcontainer">
                         <ul>
-                            <li><a href="https://www.facebook.com/aarohanfest/"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/mitaarohanfest/"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q"><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><i class="fab fa-facebook-f blue"></i></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><i class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
