--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <title>MitAarohan|Gallery|The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
-  <link rel="icon" href="/img/favicon-16x16.png">
+  <link rel="icon" href="/img/logo2.png">
 
 </head>
 <body>
