--- a/competition/comp.html
+++ b/competition/comp.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.6.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="comp.css">
-    <link rel="icon" href="/img/favicon-16x16.png">
+    <link rel="icon" href="/img/logo2.png">
 
 </head>
 
