--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
     <title>MitAarohan | Events | The Annual Cultural Fest of MIT WPU | Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
-    <link rel="icon" href="/img/favicon-16x16.png">
+    <link rel="icon" href="/img/logo2.png">
 
 </head>
 
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/competition/comp.html">Competitions</a></li>
-                <li><a href="/events/eventsnew.html">Events</a></li>
+                <li><a href="#pageone">Events</a></li>
                 <li><a href="/gallery/gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="/sponsor/sponsor.html" target="_blank">Sponsors</a></li>
             </ul>
@@ -32,7 +32,7 @@
         <i class="fas fa-bars" onclick="showMenu()"></i>
     </nav>
     <div class="containerfull">
-        <section class="one">
+        <section class="one" id="pageone">
             <div class="info">
                 <h1>Pronite</h1>
                 <p>A beat drop, that makes you jump in excitement. A song that makes thousands sing in unison.
