--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MitAarohan | The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>
-    <link rel="icon" href="/img/favicon-16x16.png">
+    <link rel="icon" href="/img/logo2.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
@@ -24,7 +24,7 @@
         <div class="nav-links" id="navLinks">
             <i class="fas fa-times" onclick="hideMenu()"></i>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="#homepage">Home</a></li>
                 <li><a href="./competition/comp.html">Competitions</a></li>
                 <li><a href="./events/eventsnew.html">Events</a></li>
                 <li><a href="./gallery/gallery.html" target="_blank">Gallery</a></li>
@@ -34,7 +34,7 @@
         <i class="fas fa-bars" onclick="showMenu()"></i>
     </nav>
     <div class="containerfull">
-        <section class="one">
+        <section class="one" id="homepage">
             <h1>AAROHAN</h1>
             <h2>The Cultural Fest</h2>
             <p>Aarohan is the annual cultural festival of MIT-WPU and the largest college fest of Pune.</p>
